PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016 PHP 7.0.5

- Core:
  . Fixed bug #71629 (Out-of-bounds access in php_url_decode in context
    php_stream_url_wrap_rfc2397). (mt at debian dot org)
  . Fixed bug #71622 (Strings used in pass-as-reference cannot be used to
    invoke C::$callable()). (Bob)
  . Fixed bug #71596 (Segmentation fault on ZTS with date function
    (setlocale)). (Anatol)
  . Fixed bug #71535 (Integer overflow in zend_mm_alloc_heap()). (Dmitry)
  . Fixed bug #71470 (Leaked 1 hashtable iterators). (Nikita)

- libxml:
  . Fixed bug #71536 (Access Violation crashes php-cgi.exe). (Anatol)

- ODBC:
  . Fixed bug #47803, #69526 (Executing prepared statements is succesfull only
    for the first two statements). (einavitamar at gmail dot com, Anatol)

- PDO_DBlib:
  . Bug #54648 (PDO::MSSQL forces format of datetime fields).
    (steven dot lambeth at gmx dot de, Anatol)

- Phar:
  . Fixed bug #71625 (Crash in php7.dll with bad phar filename).
    (Anatol)
  . Fixed bug #71317 (PharData fails to open specific file). (Jos Elstgeest)

- phpdbg:
  . Fixed crash when advancing (except step) inside an internal function. (Bob)

- SPL:
  . Fixed bug #71617 (private properties lost when unserializing ArrayObject).
    (Nikita)

- Standard:
  . Fixed bug #71660 (array_column behaves incorrectly after foreach by
    reference). (Laruence)

- Zip:
  . Update bundled libzip to 1.1.2. (Remi, Anatol)

?? Mar 2016 PHP 7.0.4

- Core:
  . Fixed bug (Low probability segfault in zend_arena). (Laruence)
  . Fixed bug #71485 (Return typehint on internal func causes Fatal error
    when it throws exception). (Laruence)
  . Fixed bug #71474 (Crash because of VM stack corruption on Magento2).
    (Dmitry)
  . Fixed bug #71450 (An integer overflow bug in php_str_to_str_ex()). (Stas)